updated with team and logo

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="listLeagues">
-        
+    <div id="soccer">
+
     </div>
     
     <!-- my script -->
