updated with probability counter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="soccer">
         <div><h1>Soccer Jalan</h1></div>
-        <table class="table">
+        <table class="table smaller-font">
             <thead>
               <tr>
                 <th scope="col">Date</th>
